--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".CreateActivity"
-            android:exported="false" />
-        
+            android:exported="false"
+            android:parentActivityName=".CreateActivity"/>
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".CreateActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
