--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,16 @@
         android:theme="@style/Theme.Kevin_Ross_Martinez_DINOCO"
         tools:targetApi="31">
         <activity
+            android:name=".VerActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".CreateActivity"
             android:exported="false"
-            android:parentActivityName=".CreateActivity"/>
+            android:parentActivityName=".CreateActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
